F&GDEV/src/objects/Marketing_Materials__c.object
<CustomObject>
    <fields>
        <fullName>Request_Ad_Review_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Ad Review No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_MM_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request MM No.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Revisions__c</fullName>
        <label>Request Revisions</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>_</fullName>
                </value>
                <value>
                    <fullName>Request Revisions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Review_Date__c</fullName>
        <label>Requested Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requester_Legacy__c</fullName>
        <label>Requester (Legacy)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>contains</operation>
                <value>Ad Review</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marketing Materials</relationshipLabel>
        <relationshipName>Marketing_Materials_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Return_to_Ad_Review_Admin__c</fullName>
        <label>Return to Ad Review Admin</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>_</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Return to Ad Review Admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rev_Date_Month__c</fullName>
        <label>Rev Date - Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rev_Date_Year__c</fullName>
        <label>Rev Date - Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewRecordsComplete__c</fullName>
        <label>ReviewRecordsComplete#</label>
        <summaryFilterItems>
            <field>Ad_Review_Detail__c.Result_of_Review__c</field>
            <operation>equals</operation>
            <value>Rejected, Approved with Changes, Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Ad_Review_Detail__c.Marketing_Material__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ReviewRecords__c</fullName>
        <label>ReviewRecords#</label>
        <summaryForeignKey>Ad_Review_Detail__c.Marketing_Material__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Revised_Submission_Date__c</fullName>
        <label>Revised Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revised_Target_Date__c</fullName>
        <label>Revised Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revisions_Requested_Comments__c</fullName>
        <label>Revisions Requested Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Initial Review</fullName>
                </value>
                <value>
                    <fullName>Review Completed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Revisions Requested</fullName>
                </value>
                <value>
                    <fullName>Revisions Submitted</fullName>
                </value>
                <value>
                    <fullName>Additional Review</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>_</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_to_Ad_Review_Pick__c</fullName>
        <label>Submit to Ad Review</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Submit to Ad Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_By_Legacy__c</fullName>
        <label>Submitted By (Legacy)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Requestor__c</fullName>
        <label>Temp - Requestor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Manual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Variation_States2__c</fullName>
        <label>Variation States</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Variation_States__c</fullName>
        <label>Variation States</label>
        <type>TextArea</type>
    </fields>
    <label>Marketing Materials</label>
    <listViews>
        <fullName>Active_Ad_Review</fullName>
        <booleanFilter>1 AND 2 and 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>MktCombinedFormNumber__c</columns>
        <columns>Form_Description__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Date__c</columns>
        <columns>Current_Review_Due__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ad_Review_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Approved,Cancelled,Expired,Recalled,Closed</value>
        </filters>
        <filters>
            <field>Date_Submitted__c</field>
            <operation>greaterThan</operation>
            <value>5/16/2016</value>
        </filters>
        <label>Active Ad Review</label>
    </listViews>
    <listViews>
        <fullName>Active_Ad_Review_Admin</fullName>
        <booleanFilter>1 AND 2 and 3 and (4 or 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>Ad_Review_Priority__c</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>MktCombinedFormNumber__c</columns>
        <columns>Form_Description__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Date_Due__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Date__c</columns>
        <columns>Current_Review_Due__c</columns>
        <columns>Ad_Review_Document_Status__c</columns>
        <columns>Ad_Review_Reviews_Outstanding__c</columns>
        <columns>Ad_Review_Changes_Requested__c</columns>
        <columns>Date_Revisions_Sent__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ad_Review_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Approved,Cancelled,Expired,Recalled,Closed</value>
        </filters>
        <filters>
            <field>Date_Submitted__c</field>
            <operation>greaterThan</operation>
            <value>5/16/2016</value>
        </filters>
        <filters>
            <field>Return_to_Ad_Review_Admin__c</field>
            <operation>equals</operation>
            <value>Return to Ad Review Admin</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,Review Completed,Revisions Submitted</value>
        </filters>
        <label>Active Ad Review - Admin</label>
        <sharedTo>
            <group>Ad_Review_Admin</group>
            <group>Project_Manager_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_Ad_Review_External</fullName>
        <columns>NAME</columns>
        <columns>Ad_Review_Priority__c</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>MktCombinedFormNumber__c</columns>
        <columns>Form_Description__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Date_Due__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Date__c</columns>
        <columns>Current_Review_Due__c</columns>
        <columns>Ad_Review_Document_Status__c</columns>
        <columns>Ad_Review_Reviews_Outstanding__c</columns>
        <columns>Ad_Review_Changes_Requested__c</columns>
        <columns>Date_Revisions_Sent__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ad_Review_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Approved,Cancelled,Expired,Recalled</value>
        </filters>
        <filters>
            <field>Date_Submitted__c</field>
            <operation>greaterThan</operation>
            <value>2/28/2016</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Marketing_Materials__c.External</value>
        </filters>
        <label>Active Ad Review - External</label>
        <sharedTo>
            <group>Ad_Review_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_Ad_Review_InitialReview</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 and 6</booleanFilter>
        <columns>NAME</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>MktCombinedFormNumber__c</columns>
        <columns>Form_Description__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Date__c</columns>
        <columns>Ad_Review_Document_Status__c</columns>
        <columns>Ad_Review_Reviews_Outstanding__c</columns>
        <columns>Ad_Review_Changes_Requested__c</columns>
        <columns>Date_Revisions_Sent__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ad_Review_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Initial Review</value>
        </filters>
        <filters>
            <field>Date_Submitted__c</field>
            <operation>greaterThan</operation>
            <value>2/28/2016</value>
        </filters>
        <filters>
            <field>Ad_Review_Reviews_Outstanding__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Ad_Review_Changes_Requested__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Date_Submitted__c</field>
            <operation>lessThan</operation>
            <value>7/15/2016</value>
        </filters>
        <label>Active Ad Review - Initial Review</label>
    </listViews>
    <listViews>
        <fullName>Active_Ad_Review_Internal</fullName>
        <columns>NAME</columns>
        <columns>Ad_Review_Priority__c</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>MktCombinedFormNumber__c</columns>
        <columns>Form_Description__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Date_Due__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Date__c</columns>
        <columns>Current_Review_Due__c</columns>
        <columns>Ad_Review_Document_Status__c</columns>
        <columns>Ad_Review_Reviews_Outstanding__c</columns>
        <columns>Ad_Review_Changes_Requested__c</columns>
        <columns>Date_Revisions_Sent__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ad_Review_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Approved,Cancelled,Expired,Recalled</value>
        </filters>
        <filters>
            <field>Date_Submitted__c</field>
            <operation>greaterThan</operation>
            <value>2/28/2016</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Marketing_Materials__c.Internal</value>
        </filters>
        <label>Active Ad Review - Internal</label>
        <sharedTo>
            <group>Ad_Review_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_Ad_Review_Mine</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>MktCombinedFormNumber__c</columns>
        <columns>Form_Description__c</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Date__c</columns>
        <columns>Date_Revisions_Sent__c</columns>
        <columns>Ad_Review_Reviews_Outstanding__c</columns>
        <columns>Ad_Review_Outstanding__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Ad_Review_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Approved,Cancelled,Expired,Recalled</value>
        </filters>
        <filters>
            <field>Status_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Active Ad Review - My Records Only</label>
    </listViews>
    <listViews>
        <fullName>Active_Ad_Review_Pending45</fullName>
        <columns>NAME</columns>
        <columns>MktCombinedFormNumber__c</columns>
        <columns>Form_Description__c</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Date__c</columns>
        <columns>Date_Revisions_Sent__c</columns>
        <columns>Ad_Review_Reviews_Outstanding__c</columns>
        <columns>Ad_Review_Outstanding__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ad_Review_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Approved,Cancelled,Expired,Recalled,Initial Review,Additional Review</value>
        </filters>
        <filters>
            <field>Date_Revisions_Sent__c</field>
            <operation>lessThan</operation>
            <value>N_DAYS_AGO:45</value>
        </filters>
        <filters>
            <field>Date_Submitted__c</field>
            <operation>greaterThan</operation>
            <value>5/16/2016</value>
        </filters>
        <label>Active Ad Review - Pending 45 Days</label>
        <sharedTo>
            <group>Ad_Review_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_Ad_Review_Pending7</fullName>
        <columns>NAME</columns>
        <columns>MktCombinedFormNumber__c</columns>
        <columns>Form_Description__c</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Date__c</columns>
        <columns>Date_Revisions_Sent__c</columns>
        <columns>LastReminderSent__c</columns>
        <columns>Ad_Review_Reviews_Outstanding__c</columns>
        <columns>Ad_Review_Outstanding__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ad_Review_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Approved,Cancelled,Expired,Recalled,Initial Review,Additional Review</value>
        </filters>
        <filters>
            <field>Date_Revisions_Sent__c</field>
            <operation>lessThan</operation>
            <value>N_DAYS_AGO:7</value>
        </filters>
        <filters>
            <field>Date_Submitted__c</field>
            <operation>greaterThan</operation>
            <value>5/16/2016</value>
        </filters>
        <filters>
            <field>Date_Revisions_Sent__c</field>
            <operation>greaterThan</operation>
            <value>N_DAYS_AGO:45</value>
        </filters>
        <label>Active Ad Review - Pending 7 Days</label>
        <sharedTo>
            <group>Ad_Review_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ad_Review_Last_7_Days</fullName>
        <columns>NAME</columns>
        <columns>MktCombinedFormNumber__c</columns>
        <columns>Form_Description__c</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Date__c</columns>
        <columns>Date_Revisions_Sent__c</columns>
        <columns>LastReminderSent__c</columns>
        <columns>Ad_Review_Reviews_Outstanding__c</columns>
        <columns>Ad_Review_Outstanding__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ad_Review_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>N_DAYS_AGO:7</value>
        </filters>
        <label>Ad Review - Last 7 Days</label>
        <sharedTo>
            <group>Ad_Review_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ad_Review_Submitted_YTD</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Submitted__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2018</value>
        </filters>
        <label>Ad Review Submitted YTD</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Requester__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>Project__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved_Ad_Review_Admin</fullName>
        <columns>NAME</columns>
        <columns>Ad_Review_Priority__c</columns>
        <columns>MktCombinedFormNumber__c</columns>
        <columns>Form_Description__c</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Date__c</columns>
        <columns>Date_Revisions_Sent__c</columns>
        <columns>Ad_Review_Reviews_Outstanding__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ad_Review_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved Ad Review - Admin</label>
        <sharedTo>
            <group>Ad_Review_Admin</group>
            <group>Project_Manager_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>External_Marketing_Materials</fullName>
        <columns>NAME</columns>
        <columns>Form_Description__c</columns>
        <columns>Ad_Review_Submitter_Email__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>Ad_Type__c</columns>
        <columns>Description_of_Change__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Marketing_Materials__c.External</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>6/1/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Ad_Review_Submitter_Email__c</field>
            <operation>notContain</operation>
            <value>legacynet</value>
        </filters>
        <label>External Marketing Materials</label>
    </listViews>
    <listViews>
        <fullName>Internal_Marketing_Materials</fullName>
        <columns>Mkt_Form_Prefix__c</columns>
        <columns>MktFormNumber__c</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Marketing_Materials__c.Internal,Marketing_Materials__c.Internal_No_Ad_Review_Required</value>
        </filters>
        <label>Internal Marketing Materials</label>
    </listViews>
    <listViews>
        <fullName>Legacy</fullName>
        <booleanFilter>(1 or 4) and 2 and 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Ad_Review_Number__c</columns>
        <columns>Form_Description__c</columns>
        <columns>Ad_Review_Submitter_Email__c</columns>
        <columns>Original_Approval__c</columns>
        <columns>Current_Expiration__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Form_Description__c</field>
            <operation>contains</operation>
            <value>legacy</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Original_Approval__c</field>
            <operation>greaterThan</operation>
            <value>1/31/2015</value>
        </filters>
        <filters>
            <field>Ad_Review_Submitter_Email__c</field>
            <operation>contains</operation>
            <value>legacy</value>
        </filters>
        <label>Legacy</label>
    </listViews>
    <nameField>
        <displayFormat>MM-{0000}</displayFormat>
        <label>Marketing Materials Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Materials</pluralLabel>
    <recordTypes>
        <fullName>External</fullName>
        <active>true</active>
        <description>Marketing Marketing Material that needs to go through the Ad Review approval process.</description>
        <label>External</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <description>Internal Marketing Marketing Material that needs to go through the Ad Review approval process.</description>
        <label>Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_No_Ad_Review_Required</fullName>
        <active>true</active>
        <description>Internal Marketing Material that does not need to go through the Ad Review approval process.</description>
        <label>Internal-No Ad Review Required</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>MM_Prefix_Must_be_Selected</fullName>
        <active>true</active>
        <description>You must select a MM Prefix in order to request a Marketing Material number.</description>
        <errorConditionFormula>and(Request_MM_No__c ,ispickval( Mkt_Form_Prefix__c ,&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Mkt_Form_Prefix__c</errorDisplayField>
        <errorMessage>You must select a Prefix for the Marketing Material Number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Request_AdReview_Checkbox</fullName>
        <active>true</active>
        <errorConditionFormula>And(Ischanged(Request_Ad_Review_No__c), Request_Ad_Review_No__c==False)</errorConditionFormula>
        <errorDisplayField>Request_Ad_Review_No__c</errorDisplayField>
        <errorMessage>You Cannot Deselect this checkbox.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Request_MM_Checkbox</fullName>
        <active>true</active>
        <errorConditionFormula>and(ischanged(Request_MM_No__c), 

Request_MM_No__c=False)</errorConditionFormula>
        <errorDisplayField>Request_MM_No__c</errorDisplayField>
        <errorMessage>You Cannot Deselect this checkbox.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Year_4_Digit</fullName>
        <active>true</active>
        <errorConditionFormula>AND (NOT(ISBLANK( Rev_Date_Year__c )),LEN(Rev_Date_Year__c )&lt;&gt;4)</errorConditionFormula>
        <errorDisplayField>Rev_Date_Year__c</errorDisplayField>
        <errorMessage>Please enter year in YYYY format.</errorMessage>
    </validationRules>
</CustomObject>